[package]
name = "btree-ondisk"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
atomic_refcell = { version = "0.1.13", optional = true }
futures = "0.3.31"
maybe-async = "0.2.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
human_bytes = "0.4.3"
indicatif = "0.17"
crossbeam-skiplist = "0.1.3"
maybe-async = "0.2.10"
rand = "0.8.5"

[features]
default = ["rc", "value-check"]
rc = []
value-check = []
arc = ["atomic_refcell"]
sync-api = ["maybe-async/is_sync"]

[[example]]
name = "mt-rc"
path = "examples/mt-rc.rs"

[[example]]
name = "mt-arc"
path = "examples/mt-arc.rs"
required-features = ["arc"]
