[package]
name = "btree-ondisk"
version = "0.15.0"
edition = "2021"
description = "A Rust implementation of BTree structure on persistent storage in userspace."
authors = ["Dai Yiyang"]
license = "GPL-2.0-or-later"
categories = ["data-structures"]
keywords = ["btree", "b+tree"]
homepage = "https://github.com/daiyy/btree-ondisk"
repository = "https://github.com/daiyy/btree-ondisk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
atomic_refcell = { version = "0.1.13", optional = true }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
maybe-async = "0.2.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
human_bytes = "0.4.3"
indicatif = "0.17"
crossbeam-skiplist = "0.1.3"
maybe-async = "0.2.10"
rand = "0.8.5"
clap = { version = "4.5.38", features = ["derive"] }

[features]
default = ["rc", "value-check", "tokio-runtime"]
rc = []
value-check = []
arc = ["atomic_refcell"]
sync-api = ["maybe-async/is_sync"]
mt = []
tokio-runtime = ["dep:tokio"]
futures-runtime = ["dep:futures"]

[[example]]
name = "mt-rc"
path = "examples/mt-rc.rs"

[[example]]
name = "mt-arc"
path = "examples/mt-arc.rs"
required-features = ["arc"]
